# loopidity

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTING.md  LICENSE  LICENSES  LoopiditySDL.cbp  LoopiditySDL.depend  LoopiditySDL.layout  Makefile.am  Makefile.in  README  README-MINGW.md  README-VC2008.md  README.md  configure  configure.ac  debug.cpp  debug.h  jack_io.cpp  jack_io.h  loopidity.cpp  loopidity.h  loopidity_sdl.cpp  loopidity_sdl.h  main.cpp  mk  mk-clean  mk-dbg  scene.cpp  scene.h  scene_sdl.cpp  scene_sdl.h  trace.cpp  trace.h
assets/: LICENSES  Makefile.am  Makefile.in  README.md
blobs/: LICENSES.blobs  README.md
data/: README.md
debian/: changelog  control  copyright  gbp.conf  loopidity.manpages  rules  watch
doc/: buffer-layout.txt  loopidity.1
hooks/: common.inc  post-commit  pre-commit
obs/: PKGBUILD  PKGBUILD.in  README.md  _service  _service.in  debian.changelog  debian.control  debian.copyright  debian.rules  loopidity-xUbuntu_16.04.dsc.in  loopidity.dsc  loopidity.dsc.in  loopidity.spec  loopidity.spec.in
src/: Makefile  Makefile.am  Makefile.in  jack_io.cpp  jack_io.h  loopidity.cpp  loopidity.h  loopidity_sdl.cpp  loopidity_sdl.h  main.cpp  scene.cpp  scene.h  scene_sdl.cpp  scene_sdl.h  trace.cpp  trace.h
src/assets/: fonts.cpp  fonts.h  images.cpp  images.h  purisa.h  scope_gradient.h
src/blobs/: fonts.h  histogram_gradient.h  purisa.h
src/constants/: controller_constants.h  feature_constants.h  scene_constants.h  view_constants.h
src/data/: images.h  loop_gradient.h  purisa.h
src/trace/: trace.cpp  trace.h
