bin_PROGRAMS      = loopidity
loopidity_SOURCES = jack_io.cpp       \
                    jack_io.h         \
                    loopidity.cpp     \
                    loopidity.h       \
                    loopidity_sdl.cpp \
                    loopidity_sdl.h   \
                    main.cpp          \
                    scene.cpp         \
                    scene.h           \
                    scene_sdl.cpp     \
                    scene_sdl.h       \
                    trace.cpp         \
                    trace.h
